初步完成本地音乐播放、歌词显示功能

--- a/MyApp/app/src/main/res/layout/music_main_layout.xml
+++ b/MyApp/app/src/main/res/layout/music_main_layout.xml
@@ -1,22 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
+    android:id="@+id/main_music_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <TextView
-        android:id="@+id/tv_song_name"
+        android:id="@+id/tv_cur_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:textColor="#be68a8"
-        android:text="歌曲名"
-        android:hint="歌曲名"/>
-    <TextView
-        android:id="@+id/tv_current_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:textColor="#be68a8"
-        android:hint="播放时间"/>
+        android:hint="time"/>
 
 </LinearLayout>
