--- a/MyApp/app/src/main/res/layout/main_layout.xml
+++ b/MyApp/app/src/main/res/layout/main_layout.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorAccent">
+    android:background="@color/bg_transparent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
