--- a/MyApp/app/src/main/res/layout/music_layout.xml
+++ b/MyApp/app/src/main/res/layout/music_layout.xml
@@ -54,13 +54,19 @@
             android:layout_weight="0.2"
             android:weightSum="1"
             android:orientation="vertical">
+            <ImageButton
+                android:id="@+id/btn_play_type"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.1"
+                android:background="@color/bg_transparent"
+                android:src="@mipmap/icon_playing_mode_normal"/>
             <LinearLayout
-                android:id="@+id/viewGroup"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_alignParentBottom="true"
                 android:gravity="center_horizontal"
-                android:layout_weight="0.75"
+                android:layout_weight="0.65"
                 android:weightSum="1"
                 android:orientation="horizontal" >
                 <ImageButton
@@ -84,13 +90,6 @@
                     android:layout_weight="0.25"
                     android:background="@color/bg_transparent"
                     android:src="@drawable/play_next_selector"/>
-                <ImageButton
-                    android:id="@+id/btn_play_type"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="0.2"
-                    android:background="@color/bg_transparent"
-                    android:src="@mipmap/icon_playing_mode_normal"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
