--- a/MyApp/app/src/main/res/layout/music_itemview.xml
+++ b/MyApp/app/src/main/res/layout/music_itemview.xml
@@ -8,12 +8,13 @@
     <ImageView
         android:layout_width="60dp"
         android:layout_height="60dp"
+        android:layout_margin="5dp"
         android:src="@mipmap/ic_launcher"
+        android:scaleType="centerInside"
         android:id="@+id/image" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
         android:layout_marginLeft="5dp"
         android:orientation="vertical">
         <LinearLayout
