--- a/MyApp/app/src/main/res/layout/music_main_layout.xml
+++ b/MyApp/app/src/main/res/layout/music_main_layout.xml
@@ -1,16 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:id="@+id/main_music_view"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:android_custom="http://schemas.android.com/apk/res/com.lw.myapp"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main_music_viewGroup"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="horizontal"
+    android:padding="20dp">
 
-    <TextView
-        android:id="@+id/tv_cur_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:textColor="#be68a8"
-        android:hint="time"/>
+    <com.lw.myapp.view.RoundProgressBar
+        android:id="@+id/music_progressBar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center_vertical"
 
-</LinearLayout>
+        android_custom:roundColor="@color/roundColor"
+        android_custom:roundProgressColor="@color/roundProgressColor"
+        android_custom:progressPointColor="@color/progressPointColor"
+        android_custom:roundWidth="10dip"
+        android_custom:progressWidth="2dip"/>
+
+    <ImageView
+        android:id="@+id/main_music_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center_vertical"
+        android:layout_margin="10dp"
+        android:background="@color/bg_transparent" />
+
+</FrameLayout>
