--- a/MyApp/app/src/main/res/values/attrs.xml
+++ b/MyApp/app/src/main/res/values/attrs.xml
@@ -5,4 +5,20 @@
     <attr name="colorBlue"  format="color"/>
     <attr name="colorRed"  format="color"/>
     <attr name="bg_transparent" format="color" />
+
+    <declare-styleable name="RoundProgressBar">
+        <attr name="roundColor" format="color"/>
+        <attr name="roundProgressColor" format="color"/>
+        <attr name="progressPointColor" format="color"/>
+        <attr name="roundWidth" format="dimension"></attr>
+        <attr name="progressWidth" format="dimension"></attr>
+        <attr name="textColor" format="color" />
+        <attr name="textSize" format="dimension" />
+        <attr name="max" format="integer"></attr>
+        <attr name="textIsDisplayable" format="boolean"></attr>
+        <attr name="style">
+            <enum name="STROKE" value="0"></enum>
+            <enum name="FILL" value="1"></enum>
+        </attr>
+    </declare-styleable>
 </resources>
